gl31-master/src/test/deca/syntax/valid/complet/cast.deca
// Description:
//    tests de programme correct syntaxiquement pour complet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 24/01/2021
{
    int a;
    float f = (float)(a);
}
